bk_ida/gccida/g1/ggc_alloc
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1322:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v3; // rbp 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1325:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *free_pages; // r14 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1326:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v7; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1334:1: error: unknown type name 'page_group_0'; did you mean 'page_group'?
page_group_0 *group; // r13 
^~~~~~~~~~~~
page_group
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:267:3: note: 'page_group' declared here
} page_group;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1335:1: error: unknown type name 'page_group_0'; did you mean 'page_group'?
page_group_0 *v16; // rcx 
^~~~~~~~~~~~
page_group
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:267:3: note: 'page_group' declared here
} page_group;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1336:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v17; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1344:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *next; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1369:31: error: subscripted value is not an array, pointer, or vector
while ( *(long long *)0x946098[v1] < size ); 
                      ~~~~~~~~^~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1386:22: error: expected expression
v7 = ( page_entry_0 *)( &G + 2640); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1386:8: error: use of undeclared identifier 'page_entry_0'
v7 = ( page_entry_0 *)( &G + 2640); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1446:25: error: expected expression
group = ( page_group_0 *)&v9[v8 - v14]; 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1446:11: error: use of undeclared identifier 'page_group_0'
group = ( page_group_0 *)&v9[v8 - v14]; 
          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1451:25: error: expected expression
group = ( page_group_0 *)( ( char *)group + v11); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1451:11: error: use of undeclared identifier 'page_group_0'
group = ( page_group_0 *)( ( char *)group + v11); 
          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1460:23: error: expected expression
v16 = ( page_group_0 *)&v9[v8 - v14]; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1460:9: error: use of undeclared identifier 'page_group_0'
v16 = ( page_group_0 *)&v9[v8 - v14]; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1461:25: error: expected expression
group = ( page_group_0 *)( page - 32); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1461:11: error: use of undeclared identifier 'page_group_0'
group = ( page_group_0 *)( page - 32); 
          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/ggc-page.c:1479:23: error: expected expression
v17 = ( page_entry_0 *)xcalloc( 1uLL, elsize); 
                      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_alloc/src/obj/ggc-page.o] Error 1
